[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "actuarialmath"
version = "0.0.1"
authors = [
  { name="Terence Lim"},
]
description = "A package for life contingent risks"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/terence-lim/actuarialmath"
"Bug Tracker" = "https://github.com/terence-lim/actuarialmath/issues"
