[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "actuarialmath"
#version =  "0.0.103"
version = "0.0.11" 
authors = [
  { name="Terence Lim"},
]
description = "A package for actuarial math and life contingent risks"
readme = "index.rst"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "matplotlib>=3.7.1",
  "numpy>=1.24.3",
  "pandas>=2.0.2",
  "scipy>=1.10.1",
]

[project.urls]
"Homepage" = "https://terence-lim.github.io/actuarialmath-guide"
"Bug Tracker" = "https://github.com/terence-lim/actuarialmath/issues"
